correção de bug no overflow-x

--- a/css/animation.css
+++ b/css/animation.css
@@ -1,6 +1,3 @@
-* {
-    overflow-x: hidden;
-}
 
 .animation-section {
     width: 100%;
